# rgbd-plane-segmentation

masterThesis/: README.md
masterThesis/shapeMatching/: CMakeLists.txt
masterThesis/shapeMatching/include/match/: GHDistance.hpp  KeypointDetector.hpp  Metric.hpp
masterThesis/shapeMatching/models/: bunny.pcd  bunny.vtk  horse.pcd  horse.vtk
masterThesis/shapeMatching/src/: GHDistance.cpp  KeypointDetector.cpp  Metric.cpp  main.cpp  voxel_grid.cpp
plane_detection/: CMakeLists.txt  Doxyfile.in
plane_detection/include/: .Frame.hpp.swp  CropPlaneInliers.hpp  DataSet.hpp  Frame.hpp  Transform3D.hpp  utils.hpp
plane_detection/src/: .Frame.cpp.swp  .Frame.cu.swp  .main.cpp.swp  .main.cu.swp  CropPlaneInliers.cpp  DataSet.cpp  Frame.cpp  Frame.cu  Frame.cu~  Transform3D.cpp  hola  main.cpp  main.cu  main.cu~  utils.cpp
